fix(product) : Fix offers/refactoring route names/basic integration (offre/{id})

--- a/templates/offers/new.html.twig
+++ b/templates/offers/new.html.twig
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="{{ asset('assets/vendors/summernote/summernote.css') }}">
 {% endblock %}
 
-{% block title %}New Offers
+{% block title %}Déposer une offre d'emploi
 {% endblock %}
 
 {% block body %}
