--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -120,7 +120,7 @@
 					<!-- Job item -->
 					{% for offer in offers %}
 						<div class="col-xs-12">
-							<a class="item-block" href="{{ path('student_offer', {'id': offer.id}) }}">
+							<a class="item-block" href="{{ path('offer_show', {'id': offer.id}) }}">
 								<header>
 									<img src="assets/img/logo-google.jpg" alt="">
 									<div class="hgroup">
