--- a/templates/offers/_form.html.twig
+++ b/templates/offers/_form.html.twig
@@ -102,7 +102,7 @@
 			{{ form_errors(form.description) }}
 
 		</div>
-		{# <a href="{{ path('offer_index') }}">back to list</a> #}
+		{# <a href="{{ path('offer_list') }}">back to list</a> #}
 	</section>
 	<!-- END Job detail -->
 
