--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -67,7 +67,7 @@
                 </h4>
                 <h5>
                   {% if offer.business %}
-                  <a href="{{ path('businesses_show', {'id': offer.business.id}) }}">{{ offer.business.name }}</a>
+                  <a href="{{ path('business_show', {'id': offer.business.id}) }}">{{ offer.business.name }}</a>
                   {% endif %}
                 </h5>
               </div>
