--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -503,7 +503,7 @@
 			<p class="text-center">
 				{{ form_widget(form.submit, { 'label': 'Valider' }) }}
 			</p>
-			{# <a href="{{ path('student_index') }}">
+			{# <a href="{{ path('student_list') }}">
 																			<<<backtolist</a></div></section><!--ENDSubmit--></main><!--ENDMaincontainer--> #}
 
 			{{ form_end(form) }}
