--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -27,13 +27,13 @@
         <!-- Navigation menu -->
         <ul class="nav-menu">
           <li>
-            <a href="{{ path("businesses_list") }}">Les Entreprises</a>
+            <a href="{{ path("business_list") }}">Les Entreprises</a>
           </li>
           <li>
-            <a href="{{ path("offer_index") }}">Offres d'emploi</a>
+            <a href="{{ path("offer_list") }}">Offres d'emploi</a>
           </li>
           <li>
-            <a href="{{ path("student_profil") }}">Mon profil</a>
+            <a href="{{ path("student_profile") }}">Mon profil</a>
           </li>
         </ul>
         <!-- END Navigation menu -->
