--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -23,7 +23,7 @@
         </div>
         {% endif %}
         <!-- END User account -->
-        {% if is_granted('ROLE_APPRENANT') %}
+        {% if is_granted('ROLE_STUDENT') %}
         <!-- Navigation menu -->
         <ul class="nav-menu">
           <li>
