--- a/templates/ressources/footer.html.twig
+++ b/templates/ressources/footer.html.twig
@@ -24,7 +24,7 @@
 
     
     <div class="col-xs-6 col-md-3">
-    {% if is_granted('ROLE_APPRENANT') %}
+    {% if is_granted('ROLE_STUDENT') %}
       <h6>Alternants</h6>
       <ul class="footer-links">
         <li><a href="javascript:;">Mon profil</a></li>
