--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -20,19 +20,32 @@
 
 					<div class="row">
 						<div class="form-group col-xs-12 col-sm-4">
-							<input type="text" class="form-control" placeholder="Keyword: name, skills, or tags">
+							<input type="text" class="form-control" placeholder="Mots clés" name="keyword" value={{ parameters.keyword }}>
 						</div>
 
 						<div class="form-group col-xs-12 col-sm-4">
-							<input type="text" class="form-control" placeholder="Location: city, state or zip">
+							<select class="form-control selectpicker" name="location">
+								<option selected>Toutes les communes</option>
+									{% for city in cities %}
+										{% if parameters.location == city.name %}
+											<option selected>{{ city.name }}</option>
+										{% else %}
+											<option>{{ city.name }}</option>
+										{% endif %}
+									{% endfor %}
+							</select>
 						</div>
 
 						<div class="form-group col-xs-12 col-sm-4">
-							<select class="form-control selectpicker" multiple>
-								<option selected>Toutes les formations</option>
-								{% for section in sections %}
-									<option>{{section.name}}</option>
-								{% endfor %}
+							<select class="form-control selectpicker" name="section">
+								<option selected>Toutes les sections</option>
+									{% for section in sections %}
+										{% if parameters.section == section.name %}
+											<option selected>{{ section.name }}</option>
+										{% else %}
+											<option>{{ section.name }}</option>
+										{% endif %}
+									{% endfor %}
 							</select>
 						</div>
 
