--- a/templates/businesses/index.html.twig
+++ b/templates/businesses/index.html.twig
@@ -13,7 +13,7 @@
 
           <div class="row">
             <div class="form-group col-xs-12 col-sm-8">
-              <input type="text" name="keyword" class="form-control" placeholder="Mot clé" value={{ keyword }}>
+              <input type="text" name="keyword" class="form-control" placeholder="Mot clé" value={{ parameters.keyword }}>
             </div>
 
             <div class="form-group col-xs-12 col-sm-4">
@@ -53,6 +53,10 @@
 
             <div class="col-xs-12">
               <br>
+              <h5>
+								<strong>{{businesses|length}}</strong>
+								résultats trouvés.
+							</h5>
             </div>
 
             <!-- Company detail -->
