--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -122,7 +122,7 @@
 						<div class="col-xs-12">
 							<a class="item-block" href="{{ path('offer_show', {'id': offer.id}) }}">
 								<header>
-									<img src="assets/img/logo-google.jpg" alt="">
+									<img src="{{ asset('assets/img/logo-google.jpg') }}" alt="">
 									<div class="hgroup">
 										<h4>
 											<td>{{ offer.title }}</td>
@@ -165,6 +165,4 @@
 	</main>
 	<!-- END Main container -->
 
-
-	{{ include('businesses/_delete_form.html.twig') }}
 {% endblock %}
