--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -38,17 +38,33 @@
         </ul>
         <!-- END Navigation menu -->
         {% endif %}
-        {% if is_granted('ROLE_BUSINESSES') %}
+        {% if is_granted('ROLE_BUSINESS') %}
         <!-- Navigation menu -->
         <ul class="nav-menu">
           <li>
-            <a href="javascript:;">Les Apprenants</a>
+            <a href="{{ path("student_list") }}">Les Apprenants</a>
           </li>
           <li>
-            <a href="javascript:;">Mes offres d'emploi</a>
+            <a href="{{ path('business_show', {'id': app.user.business.id}) }}">Mes offres d'emploi</a>
           </li>
           <li>
-            <a href="javascript:;">Mon Entreprise</a>
+            <a href="{{ path("business_profile") }}">Mon Entreprise</a>
+          </li>
+        </ul>
+        <!-- END Navigation menu -->
+        {% endif %}
+
+        {% if is_granted('ROLE_ADMIN') %}
+        <!-- Navigation menu -->
+        <ul class="nav-menu">
+          <li>
+            <a href="{{ path("student_list") }}">Les Apprenants</a>
+          </li>
+          <li>
+            <a href="{{ path("business_list") }}">Les Entreprises</a>
+          </li>
+          <li>
+            <a href="{{ path("offer_list") }}">Offres d'emploi</a>
           </li>
         </ul>
         <!-- END Navigation menu -->
