feat(engineering) : #82 add skills student

--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -1,45 +1,78 @@
-{% form_theme formStudent 'form/form_errors.html.twig' %}
+{% form_theme form 'form/form_errors.html.twig' %}
 
-{{ form_start(formStudent) }}
+{% macro printSkillRow(skill) %}
+        <div class="col-xs-12">
+          <div class="item-block">
+            <div class="item-form">
+
+              <button class="btn btn-danger btn-float btn-remove">
+                <i class="ti-close"></i>
+              </button>
+
+              <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                  <div class="form-group">
+                      {{form_widget(skill.title)}}
+                  </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+
+                  <div class="form-group">
+                    <div class="input-group">
+                        {{form_widget(skill.percentage)}}
+                      <span class="input-group-addon">%</span>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+{% endmacro %}
+
+{{ form_start(form) }}
 
 <header class="page-header">
   <div class="container page-name">
-    <h1 class="text-center">Add your resume</h1>
-    <p class="lead text-center">Create your resume and put it online.</p>
+    <h1 class="text-center">{{ form_title }}</h1>
+    <p class="lead text-center">{{ form_desc }}</p>
   </div>
 
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-4">
         <div class="form-group">
-          {{form_widget(formStudent.image)}}
+          {{form_widget(form.image)}}
           <span class="help-block">Définir une image de profil</span>
         </div>
       </div>
       <div class="col-xs-12 col-sm-8">
         <div class="form-group">
-          {% if not formStudent.lastName.vars.valid %}
+          {% if not form.lastName.vars.valid %}
             <div class="has-error">
-              {{form_widget(formStudent.lastName)}}
+              {{form_widget(form.lastName)}}
             </div>
           {% else %}
-            {{form_widget(formStudent.lastName)}}
+            {{form_widget(form.lastName)}}
           {% endif %}
-          {{ form_errors(formStudent.lastName) }}
+          {{ form_errors(form.lastName) }}
         </div>
         <div class="form-group">
-          {% if not formStudent.firstName.vars.valid %}
+          {% if not form.firstName.vars.valid %}
             <div class="has-error">
-              {{form_widget(formStudent.firstName)}}
+              {{form_widget(form.firstName)}}
             </div>
           {% else %}
-            {{form_widget(formStudent.firstName)}}
+            {{form_widget(form.firstName)}}
           {% endif %}
-          {{ form_errors(formStudent.firstName) }}
+          {{ form_errors(form.firstName) }}
         </div>
 
         <div class="form-group">
-          {{form_widget(formStudent.minDescription)}}
+          {{form_widget(form.minDescription)}}
         </div>
 
         <hr class="hr-lg">
@@ -52,7 +85,7 @@
               <span class="input-group-addon">
                 <i class="fa fa-map-marker"></i>
               </span>
-              {{form_widget(formStudent.location)}}
+              {{form_widget(form.location)}}
             </div>
           </div>
 
@@ -61,7 +94,7 @@
               <span class="input-group-addon">
                 <i class="fa fa-globe"></i>
               </span>
-              {{form_widget(formStudent.website)}}
+              {{form_widget(form.website)}}
             </div>
           </div>
 
@@ -70,14 +103,14 @@
               <span class="input-group-addon">
                 <i class="fa fa-birthday-cake"></i>
               </span>
-              {% if not formStudent.age.vars.valid %}
+              {% if not form.age.vars.valid %}
                 <div class="has-error">
-                  {{form_widget(formStudent.age)}}
+                  {{form_widget(form.age)}}
                 </div>
               {% else %}
-                {{form_widget(formStudent.age)}}
+                {{form_widget(form.age)}}
               {% endif %}
-              {{ form_errors(formStudent.age) }}
+              {{ form_errors(form.age) }}
               <span class="input-group-addon">Years old</span>
             </div>
           </div>
@@ -86,14 +119,14 @@
               <span class="input-group-addon">
                 <i class="fa fa-phone"></i>
               </span>
-              {% if not formStudent.phoneNumber.vars.valid %}
+              {% if not form.phoneNumber.vars.valid %}
                 <div class="has-error">
-                  {{form_widget(formStudent.phoneNumber)}}
+                  {{form_widget(form.phoneNumber)}}
                 </div>
               {% else %}
-                {{form_widget(formStudent.phoneNumber)}}
+                {{form_widget(form.phoneNumber)}}
               {% endif %}
-              {{ form_errors(formStudent.phoneNumber) }}
+              {{ form_errors(form.phoneNumber) }}
             </div>
           </div>
           <div class="form-group col-xs-8 col-sm-6">
@@ -101,14 +134,14 @@
               <span class="input-group-addon">
                 <i class="fa fa-envelope"></i>
               </span>
-              {% if not formStudent.email.vars.valid %}
+              {% if not form.email.vars.valid %}
                 <div class="has-error">
-                  {{form_widget(formStudent.email)}}
+                  {{form_widget(form.email)}}
                 </div>
               {% else %}
-                {{form_widget(formStudent.email)}}
+                {{form_widget(form.email)}}
               {% endif %}
-              {{ form_errors(formStudent.email) }}
+              {{ form_errors(form.email) }}
             </div>
           </div>
         </div>
@@ -116,7 +149,7 @@
           <div class="action-buttons">
             <div class="upload-button">
               <button class="btn btn-block btn-primary">Choose a cover image</button>
-              {{form_widget(formStudent.coverImage)}}
+              {{form_widget(form.coverImage)}}
             </div>
           </div>
         </div>
@@ -150,7 +183,7 @@
               <span class="input-group-addon">
                 <i class="fa fa-twitter"></i>
               </span>
-              {{form_widget(formStudent.twitter)}}
+              {{form_widget(form.twitter)}}
             </div>
           </div>
         </div>
@@ -161,7 +194,7 @@
               <span class="input-group-addon">
                 <i class="fa fa-github"></i>
               </span>
-              {{form_widget(formStudent.github)}}
+              {{form_widget(form.github)}}
             </div>
           </div>
 
@@ -419,90 +452,19 @@
       </header>
 
       <div class="row">
-		{% for skill in formStudent.skills %}
-        <div class="col-xs-12">
-		
-          <div class="item-block">
-            <div class="item-form">
 
-              <button class="btn btn-danger btn-float btn-remove">
-                <i class="ti-close"></i>
-              </button>
+      <div class="skills" data-prototype="{{ _self.printSkillRow(form.skills.vars.prototype)|e('html_attr')}}" >
 
-              <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                  <div class="form-group">
-                    {# <input type="text" class="form-control" placeholder="exemple: HTML, CSS, JS ..."> #}
-                    {% if not formStudent.title.vars.valid %}
-                      <div class="has-error">
-                        {{form_widget(formStudent.title)}}
-                      </div>
-                    {% else %}
-                      {{form_widget(formStudent.title)}}
-                    {% endif %}
-                    {{ form_errors(formStudent.title) }}
-                  </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6">
-
-                  <div class="form-group">
-                    <div class="input-group">
-                      {# <input type="text" class="form-control" placeholder="exemple: 30,40,50,100..."> #}
-                      {% if not formStudent.percentage.vars.valid %}
-                        <div class="has-error">
-                          {{form_widget(formStudent.percentage)}}
-                        </div>
-                      {% else %}
-                        {{form_widget(formStudent.percentage)}}
-                      {% endif %}
-                      {{ form_errors(formStudent.percentage) }}
-                      <span class="input-group-addon">%</span>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-
-            </div>
-          </div>
+        <div class="result-skills">
+          {% for skill in form.skills %}
+            {{ _self.printSkillRow(skill) }}
+          {% endfor %}
         </div>
-{% endfor %}
-        <div class="col-xs-12 duplicateable-content">
-          <div class="item-block">
-            <div class="item-form">
 
-              <button class="btn btn-danger btn-float btn-remove">
-                <i class="ti-close"></i>
-              </button>
 
-              <div class="row">
-                <div class="col-xs-12 col-sm-6">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="exemple: HTML, CSS, JS ...">
-                  </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-6">
-
-                  <div class="form-group">
-                    <div class="input-group">
-                      <input type="text" class="form-control" placeholder="exemple: 30,40,50,100...">
-                      <span class="input-group-addon">%</span>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-		
-
-        <div class="col-xs-12 text-center">
+        <div class="col-xs-12 text-center btn-add-option">
           <br>
-          <button class="btn btn-primary btn-duplicator">Ajouter qualification</button>
+          <button class="btn btn-primary btn-add-option">Ajouter qualification</button>
         </div>
 		
       </div>
@@ -520,11 +482,13 @@
       </header>
 
       <p class="text-center">
-        {{ form_widget(formStudent.submit, { 'label': 'Valider' }) }}
+        {{ form_widget(form.submit, { 'label': 'Valider' }) }}
       </p>
-      <a href="{{ path('students_index') }}"> <<< backtolist </a>
+      <a href="{{ path('student_index') }}"> <<< backtolist </a>
 	  </div>
-	</section><!--ENDSubmit-->
-</main><!--ENDMaincontainer-->
+	</section>
+  <!--ENDSubmit-->
+</main>
+<!--ENDMaincontainer-->
 
-{{ form_end(formStudent) }}
+{{ form_end(form) }}
