--- a/templates/students/edit.html.twig
+++ b/templates/students/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Students{% endblock %}
 
 {% block body %}
-  <!-- Page header -->
-  <header class="page-header">
-    <div class="container page-name">
-      <h1 class="text-center">Edition de mon profil</h1>
+
       {{ include('students/_form.html.twig', {'button_label': 'Update'}) }}
-    </div>
-  </header>
+
+{% endblock %}
+
+{% block javascripts %}
+  <script src="{{ asset('assets/js/skills.js') }}"></script>
 {% endblock %}
