--- a/templates/students/new.html.twig
+++ b/templates/students/new.html.twig
@@ -1,4 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    {{ include('students/_form.html.twig') }}
+	{{ include('students/_form.html.twig') }}
+{% endblock %}
+
+{% block javascripts %}
+	<script src="{{ asset('assets/js/skills.js') }}"></script>
 {% endblock %}
