--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -7,10 +7,10 @@
   <div class="container">
     <div class="col-xs-12">
       <br><br>
-      <h2>We offer <mark>1,259</mark> job vacancies right now!</h2>
-      <h5 class="font-alt">Find your desire one in a minute</h5>
+      <h2>Nous avons <mark>{{ totaloffers|length }}</mark> offres d'emplois à promouvoir!</h2>
+      <h5 class="font-alt">Un outil pour les apprenants et les entreprises propulsé par le CFA</h5>
       <br><br><br>
-      <form class="header-job-search">
+      {# <form class="header-job-search">
         <div class="input-keyword">
           <input type="text" class="form-control" placeholder="Job title, skills, or company">
         </div>
@@ -23,7 +23,7 @@
           <button class="btn btn-primary" type="submit">Find jobs</button>
           <a href="job-list.html">Advanced Job Search</a>
         </div>
-      </form>
+      </form> #}
     </div>
 
   </div>
@@ -37,8 +37,8 @@
   <section>
     <div class="container">
       <header class="section-header">
-        <span>Latest</span>
-        <h2>Recent jobs</h2>
+        <span>RÉCENT</span>
+        <h2>Les dernières offres</h2>
       </header>
       <div class="row item-blocks-connected">
         <!-- Job item -->
@@ -111,23 +111,23 @@
 
       <div class="row">
         <div class="counter col-md-3 col-sm-6">
-          <p><span data-from="0" data-to="6890"></span>+</p>
-          <h6>Jobs</h6>
+          <p><span data-from="0" data-to="{{ totaloffers|length }}"></span>+</p>
+          <h6>Emplois</h6>
         </div>
 
         <div class="counter col-md-3 col-sm-6">
-          <p><span data-from="0" data-to="1200"></span>+</p>
-          <h6>Members</h6>
+          <p><span data-from="0" data-to="{{ totalcompagny|length }}"></span>+</p>
+          <h6>Entreprises</h6>
         </div>
 
         <div class="counter col-md-3 col-sm-6">
-          <p><span data-from="0" data-to="36800"></span>+</p>
-          <h6>Resume</h6>
+          <p><span data-from="0" data-to="{{ totalstudents|length }}"></span>+</p>
+          <h6>Apprenants</h6>
         </div>
 
         <div class="counter col-md-3 col-sm-6">
-          <p><span data-from="0" data-to="15400"></span>+</p>
-          <h6>Company</h6>
+          <p><span data-from="0" data-to="10"></span>+</p>
+          <h6>A RAJOUTER</h6>
         </div>
       </div>
 
@@ -142,21 +142,17 @@
 
       <div class="col-sm-12 col-md-6">
         <header class="section-header text-left">
-          <span>Workflow</span>
-          <h2>How it works</h2>
+          <span>EN SAVOIR PLUS</span>
+          <h2>Comprendre à quoi sert CCI-LINK</h2>
         </header>
 
-        <p class="lead">Pellentesque et pulvinar orci. Suspendisse sed euismod purus. Pellentesque nunc ex, ultrices eu
-          enim non, consectetur interdum nisl. Nam congue interdum mauris, sed ultrices augue lacinia in. Praesent
-          turpis purus, faucibus in tempor vel, dictum ac eros.</p>
-        <p>Nulla quis felis et orci luctus semper sit amet id dui. Aenean ultricies lectus nunc, vel rhoncus odio
-          sagittis eu. Sed at felis eu tortor mattis imperdiet et sed tortor. Nullam ac porttitor arcu. Vivamus
-          tristique elit id tempor lacinia. Donec auctor at nibh eget tincidunt. Nulla facilisi. Nunc condimentum dictum
-          mattis.</p>
+        <p class="lead">CCI-LINK est un site de relation entre entreprise et apprenant mis en place par le centre de formation
+        en alternance.</p>
+        <p>Il a pour but de rendre la communication entre apprenants et entreprises plus simple, plus rapide et plus clair !</p>
 
 
         <br><br>
-        <a class="btn btn-primary" href="page-typography.html">Learn more</a>
+        <a class="btn btn-primary" href="https://www.cfa.cci.nc/">En savoir plus</a>
       </div>
 
       <div class="col-sm-12 col-md-6 hidden-xs hidden-sm">
@@ -173,71 +169,32 @@
   <section class="bg-alt">
     <div class="container">
       <header class="section-header">
-        <span>Categories</span>
-        <h2>Popular categories</h2>
-        <p>Here's the most popular categories</p>
+        <span>SE CONNECTER</span>
+        <h2>SE CONNECTER</h2>
+        <p>Connecter vous pour commencer !</p>
       </header>
 
-      <div class="category-grid">
-        <a href="job-list-1.html">
-          <i class="fa fa-laptop"></i>
-          <h6>Technology</h6>
-          <p>Designer, Developer, IT Service, Front-end developer, Project management</p>
+      <div class="category-grid text-center">
+        <a href="{{ path("app_login") }}">
+          <i class="fa fa-briefcase"></i>
+          <h6>Entreprises</h6>
+          <p>Connecter vous sur votre compte entreprise</p>
         </a>
-
-        <a href="job-list-2.html">
-          <i class="fa fa-line-chart"></i>
-          <h6>Accounting</h6>
-          <p>Finance, Tax service, Payroll manager, Book keeper, Human resource</p>
+        <a href="{{ path("app_login") }}">
+          <i class="fa fa-user"></i>
+          <h6>Apprenants</h6>
+          <p>Connecter vous sur votre compte apprenant</p>
         </a>
-
-        <a href="job-list-3.html">
-          <i class="fa fa-medkit"></i>
-          <h6>Medical</h6>
-          <p>Doctor, Nurse, Hospotal, Dental service, Massagist</p>
-        </a>
-
-        <a href="job-list-1.html">
-          <i class="fa fa-cutlery"></i>
-          <h6>Food</h6>
-          <p>Restaurant, Food service, Coffe shop, Cashier, Waitress</p>
-        </a>
-
-        <a href="job-list-2.html">
-          <i class="fa fa-newspaper-o"></i>
-          <h6>Media</h6>
-          <p>Journalism, Newspaper, Reporter, Writer, Cameraman</p>
-        </a>
-
-        <a href="job-list-3.html">
-          <i class="fa fa-institution"></i>
-          <h6>Government</h6>
-          <p>Federal, Law, Human resource, Manager, Biologist</p>
+        <a href="{{ path("app_login") }}">
+          <i class="fa fa-building"></i>
+          <h6>Conseillers</h6>
+          <p>Connecter vous sur votre compte conseiller</p>
         </a>
       </div>
 
     </div>
   </section>
   <!-- END Categories -->
-
-
-  <!-- Newsletter -->
-  <section class="bg-img text-center" style="background-image: url({{ asset('assets/img/bg-facts.jpg') }})">
-    <div class="container">
-      <h2><strong>Subscribe</strong></h2>
-      <h6 class="font-alt">Get weekly top new jobs delivered to your inbox</h6>
-      <br><br>
-      <form class="form-subscribe" action="#">
-        <div class="input-group">
-          <input type="text" class="form-control input-lg" placeholder="Your eamil address">
-          <span class="input-group-btn">
-            <button class="btn btn-success btn-lg" type="submit">Subscribe</button>
-          </span>
-        </div>
-      </form>
-    </div>
-  </section>
-  <!-- END Newsletter -->
 
 
 </main>
