--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -164,5 +164,7 @@
 
 	</main>
 	<!-- END Main container -->
-
+		{% if is_granted('ROLE_ADMIN') %}
+			{{ include('businesses/_delete_form.html.twig') }}
+		{% endif %}
 {% endblock %}
