--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -45,7 +45,7 @@
             <a href="{{ path("student_list") }}">Les Apprenants</a>
           </li>
           <li>
-            <a href="{{ path('business_show', {'id': app.user.business.id}) }}">Mes offres d'emploi</a>
+            {# <a href="{{ path('business_show', {'id': app.user.business.id}) }}">Mes offres d'emploi</a> #}
           </li>
           <li>
             <a href="{{ path("business_profile") }}">Mon Entreprise</a>
