--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -267,8 +267,9 @@
 			</div>
 		</section>
 		<!-- END Skills -->
-
 	</main>
 	<!-- END Main container -->
-
+	{% if is_granted('ROLE_ADMIN') %}
+		{{ include('students/_delete_form.html.twig') }}
+	{% endif %}
 {% endblock %}
