fix(product) : #120 update

--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -31,7 +31,9 @@
 							<i class="fa fa-globe"></i>
 							<a href="#">
 								{% if student.website %}
-									{{student.website}}{% else %}Pas de site internet
+									{{student.website}}
+								{% else %}
+									Pas de site internet
 								{% endif %}
 							</a>
 						</li>
@@ -171,14 +173,10 @@
 								<ul>
 									<li>lol</li>
 									<li>comment</li>
-									<li>tu
-									</li>
-									<li>veux
-									</li>
-									<li>faire
-									</li>
-									<li>ça
-									</li>
+									<li>tu</li>
+									<li>veux</li>
+									<li>faire</li>
+									<li>ça</li>
 									<li>avec un champs varchar</li>
 								</ul>
 							</div>
