feat(engineering) : #5 Add form student

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,3 +9,14 @@
         background-color: #4F805D;
     }
 }
+
+.page-header:before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    background-color: rgba(0,24,40,.55);
+}
