--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -35,7 +35,7 @@
 
 {{ form_start(form) }}
 
-<header class="page-header">
+<header class="page-header" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }}); background-color: rgba(0,24,40,.55);">
   <div class="container page-name">
     <h1 class="text-center">{{ form_title }}</h1>
     <p class="lead text-center">{{ form_desc }}</p>
@@ -71,8 +71,28 @@
           {{ form_errors(form.firstName) }}
         </div>
 
+        {% if is_granted('ROLE_ADMIN') %}
+        <div class="form-group">
+          {{form_widget(form.section)}}
+        </div>
+        {% else %}
         <div class="form-group">
           {{form_widget(form.minDescription)}}
+        </div>
+        {% endif %}
+
+        <div class="input-group input-group-sm">
+              <span class="input-group-addon">
+                <i class="fa fa-phone"></i>
+              </span>
+              {% if not form.phoneNumber.vars.valid %}
+                <div class="has-error">
+                  {{form_widget(form.phoneNumber)}}
+                </div>
+              {% else %}
+                {{form_widget(form.phoneNumber)}}
+              {% endif %}
+              {{ form_errors(form.phoneNumber) }}
         </div>
 
         <hr class="hr-lg">
@@ -114,21 +134,6 @@
               <span class="input-group-addon">Years old</span>
             </div>
           </div>
-          <div class="form-group col-xs-12 col-sm-6">
-            <div class="input-group input-group-sm">
-              <span class="input-group-addon">
-                <i class="fa fa-phone"></i>
-              </span>
-              {% if not form.phoneNumber.vars.valid %}
-                <div class="has-error">
-                  {{form_widget(form.phoneNumber)}}
-                </div>
-              {% else %}
-                {{form_widget(form.phoneNumber)}}
-              {% endif %}
-              {{ form_errors(form.phoneNumber) }}
-            </div>
-          </div>
           <div class="form-group col-xs-8 col-sm-6">
             <div class="input-group input-group-sm">
               <span class="input-group-addon">
@@ -145,7 +150,9 @@
             </div>
           </div>
         </div>
-        <div class="button-group">
+      </div>
+    </div>
+    <div class="button-group">
           <div class="action-buttons">
             <div class="upload-button">
               <button class="btn btn-block btn-primary">Choose a cover image</button>
@@ -153,12 +160,11 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
   </div>
 </header>
 <main>
   <!-- Social media -->
+  {% if is_granted('ROLE_STUDENT') %}
   <section>
     <div class="container">
 
@@ -197,15 +203,6 @@
               {{form_widget(form.github)}}
             </div>
           </div>
-
-          {# <div class="form-group">
-            <div class="input-group">
-              <span class="input-group-addon">
-                <i class="fa fa-youtube"></i>
-              </span>
-              <input type="text" class="form-control" placeholder="Profile URL">
-            </div>
-          </div> #}
         </div>
       </div>
 
@@ -472,13 +469,14 @@
     </div>
   </section>
   <!-- END Skills -->
+  {% endif %}
   <!-- Submit -->
   <section class=" bg-img" style="background-image: url(assets/img/bg-facts.jpg);">
     <div class="container">
       <header class="section-header">
-        <span>Terminer?</span>
+        <span>Vous avez terminé?</span>
         <h2>Soumettre</h2>
-        <p>Veuillez revoir vos informations une fois de plus et appuyer sur le bouton ci-dessous pour mettre votre entreprise en ligne.</p>
+        <p>Veuillez revoir vos informations une fois de plus et appuyer sur le bouton ci-dessous pour soumettre votre formulaire.</p>
       </header>
 
       <p class="text-center">
@@ -491,4 +489,6 @@
 </main>
 <!--ENDMaincontainer-->
 
-{{ form_end(form) }}
+{{ form_row(form._token) }}
+
+{{ form_end(form, {'render_rest': false}) }}
