feat(product) : #83 add educations and update skills

--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -1,5 +1,52 @@
 {% form_theme form 'form/form_errors.html.twig' %}
 
+{% macro printEducationRow(education) %}
+      <div class="col-xs-12">
+        <div class="item-block">
+          <div class="item-form">
+
+            <button class="btn btn-danger btn-float btn-remove">
+              <i class="ti-close"></i>
+            </button>
+
+            <div class="row">
+              <div class="col-xs-12 col-sm-4">
+                <div class="form-group">
+                  {{form_widget(education.image)}}
+                  <span class="help-block">Définir une image de profil</span>
+                </div>
+              </div>
+
+              <div class="col-xs-12 col-sm-8">
+                <div class="form-group">
+                  {{form_widget(education.degree)}}
+                </div>
+
+                <div class="form-group">
+                  {{form_widget(education.speciality)}}
+                </div>
+
+                <div class="form-group">
+                  {{form_widget(education.schoolName)}}
+                </div>
+
+                <div class="form-group">
+                  <div class="input-group">
+                    <span class="input-group-addon">Date de début</span>
+                    {{form_widget(education.dateFrom)}}
+                    <span class="input-group-addon">Date de fin</span>
+                    {{form_widget(education.dateTo)}}
+                  </div>
+                </div>
+
+              </div>
+                
+            </div>
+          </div>
+        </div>
+      </div>
+{% endmacro %}
+
 {% macro printSkillRow(skill) %}
         <div class="col-xs-12">
           <div class="item-block">
@@ -215,111 +262,23 @@
     <div class="container">
 
       <header class="section-header">
-        <span>Latest degrees</span>
-        <h2>Education</h2>
+        <span>Derniers diplômes</span>
+        <h2>Mes diplômes</h2>
       </header>
 
       <div class="row">
+        <div class="educations" data-prototype="{{ _self.printEducationRow(form.educations.vars.prototype)|e('html_attr')}}">
 
-        <div class="col-xs-12">
-          <div class="item-block">
-            <div class="item-form">
-
-              <button class="btn btn-danger btn-float btn-remove">
-                <i class="ti-close"></i>
-              </button>
-
-              <div class="row">
-                <div class="col-xs-12 col-sm-4">
-                  <div class="form-group">
-                    <input type="file" class="dropify" data-default-file="assets/img/logo-default.png">
-                    <span class="help-block">Please choose a square logo</span>
-                  </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-8">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Degree, e.g. Bachelor">
-                  </div>
-
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Major, e.g. Computer Science">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="School name, e.g. Massachusetts Institute of Technology">
-                  </div>
-
-                  <div class="form-group">
-                    <div class="input-group">
-                      <span class="input-group-addon">Date from</span>
-                      <input type="text" class="form-control" placeholder="e.g. 2012">
-                      <span class="input-group-addon">Date to</span>
-                      <input type="text" class="form-control" placeholder="e.g. 2016">
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <textarea class="form-control" rows="3" placeholder="Short description"></textarea>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
+        <div class="result-educations">
+          {% for education in form.educations %}
+            {{ _self.printEducationRow(education) }}
+          {% endfor %}
         </div>
-
-        <div class="col-xs-12 duplicateable-content">
-          <div class="item-block">
-            <div class="item-form">
-
-              <button class="btn btn-danger btn-float btn-remove">
-                <i class="ti-close"></i>
-              </button>
-
-              <div class="row">
-                <div class="col-xs-12 col-sm-4">
-                  <div class="form-group">
-                    <input type="file" class="dropify" data-default-file="assets/img/logo-default.png">
-                    <span class="help-block">Please choose a square logo</span>
-                  </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-8">
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Degree, e.g. Bachelor">
-                  </div>
-
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Major, e.g. Computer Science">
-                  </div>
-                  <div class="form-group">
-                    <input type="text" class="form-control" placeholder="School name, e.g. Massachusetts Institute of Technology">
-                  </div>
-
-                  <div class="form-group">
-                    <div class="input-group">
-                      <span class="input-group-addon">Date from</span>
-                      <input type="text" class="form-control" placeholder="e.g. 2012">
-                      <span class="input-group-addon">Date to</span>
-                      <input type="text" class="form-control" placeholder="e.g. 2016">
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <textarea class="form-control" rows="3" placeholder="Short description"></textarea>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xs-12 text-center">
+          
+        <div class="col-xs-12 text-center btn-add-education">
           <br>
-          <button class="btn btn-primary btn-duplicator">Add education</button>
+          <button class="btn btn-primary btn-add-education">Ajouter un diplôme</button>
         </div>
-
       </div>
     </div>
   </section>
@@ -459,9 +418,9 @@
         </div>
 
 
-        <div class="col-xs-12 text-center btn-add-option">
+        <div class="col-xs-12 text-center btn-add-skill">
           <br>
-          <button class="btn btn-primary btn-add-option">Ajouter qualification</button>
+          <button class="btn btn-primary btn-add-skill">Ajouter qualification</button>
         </div>
 		
       </div>
