--- a/templates/students/edit.html.twig
+++ b/templates/students/edit.html.twig
@@ -9,5 +9,6 @@
 {% endblock %}
 
 {% block javascripts %}
+  <script src="{{ asset('assets/js/educations.js') }}"></script>
   <script src="{{ asset('assets/js/skills.js') }}"></script>
 {% endblock %}
