--- a/templates/offers/show.html.twig
+++ b/templates/offers/show.html.twig
@@ -31,7 +31,7 @@
 				</ul>
 				<div class="button-group">
 					<div class="action-buttons">
-						{% if (is_granted('ROLE_ADMIN')) %}
+						{% if (app.user.business.id == offer.business.id or is_granted('ROLE_ADMIN')) %}
 							<a class="btn btn-xs btn-gray" href="{{ path('offer_edit', {'id': offer.id}) }}">Modifier</a>
 							<div class="delete-btn">{{ include('offers/_delete_form.html.twig') }}</div>
 						{% endif %}
