fix(database) : fix user entity minDescription

--- a/templates/students/_form.html.twig
+++ b/templates/students/_form.html.twig
@@ -124,7 +124,7 @@
         </div>
         {% else %}
         <div class="form-group">
-          {{form_widget(form.minDescription)}}
+          {{form_widget(form.description)}}
         </div>
         {% endif %}
 
